5/4 更新m类型数据读写

--- a/plc/config/config.json
+++ b/plc/config/config.json
@@ -1,1 +1,1 @@
-{"io_type_dict": {"input": 129, "mw": 131, "m_bool": 131, "db": 132, "output": 130}}
+{"io_type_dict": {"input": 129, "m": 131, "db": 132, "output": 130}}
